kadai2-debug.txt
exer2.c:14:27: error: expected ';' after expression
    printf("文字列：")
                      ^
                      ;

14行目にセミコロンが抜けている

printf(“文字列:”)→printf(“文字列:”);

exer2.c:15:17: warning: format specifies type 'char *' but the argument has type
      'char (*)[100]' [-Wformat]
    scanf("%s", &str);
           ~~   ^~~~

&がいらない

exer2.c:22:21: warning: incompatible pointer to integer conversion assigning to
      'char' from 'char [2]' [-Wint-conversion]
    reverse[length] = "\0";

“ではなく’をつかう

Undefined symbols for architecture x86_64:
  "_get_length", referenced from:
      _main in exer2-ea775d.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
30行目　get_lengtになっている

get_lengt→get_length



20行目　length-i→length-i-1　　-1が足りない